<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/Logo"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:paddingStart="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092"
        app:srcCompat="@drawable/logo_icontext_blue" />


    <!-- Heading - Title -->
    <TextView
        android:id="@+id/profile_privacy_policy_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.160"
        app:layout_constraintHorizontal_bias="0.50"
        android:text="@string/profile_privacy_policy_lbl"
        android:textAppearance="@style/headings"/>

    <!-- Subheading - Last Update -->
    <TextView
        android:id="@+id/profile_last_updated_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.193"
        app:layout_constraintHorizontal_bias="0.50"
        android:text="@string/profile_last_updated_lbl"
        android:textAppearance="@style/subheadings"/>


    <!-- Heading - 1. Information We Collect -->
    <TextView
        android:id="@+id/profile_information_we_collect_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.245"
        app:layout_constraintHorizontal_bias="0.20"
        android:text="@string/profile_information_we_collect_lbl"
        android:textAppearance="@style/headings"/>

    <!-- Subheadings -->
    <TextView
        android:id="@+id/profile_we_only_collect_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.275"
        app:layout_constraintHorizontal_bias="0.51"
        android:text="@string/profile_we_only_collect_txt"
        android:textAppearance="@style/subheadings"/>

    <TextView
        android:id="@+id/profile_information_to_collect_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.311"
        app:layout_constraintHorizontal_bias="0.42"
        android:text="@string/profile_information_to_collect_txt"
        android:textAppearance="@style/subheadings"/>


    <!-- Heading - 2. How We Use Your Information -->
    <TextView
        android:id="@+id/profile_how_we_use_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.435"
        app:layout_constraintHorizontal_bias="0.37"
        android:text="@string/profile_how_we_use_lbl"
        android:textAppearance="@style/headings"/>

    <!-- Subheadings -->
    <TextView
        android:id="@+id/profile_we_use_your_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.465"
        app:layout_constraintHorizontal_bias="0.14"
        android:text="@string/profile_we_use_your_txt"
        android:textAppearance="@style/subheadings"/>

    <TextView
        android:id="@+id/profile_use_data_to_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.500"
        app:layout_constraintHorizontal_bias="0.30"
        android:text="@string/profile_use_data_to_txt"
        android:textAppearance="@style/subheadings"/>


    <!-- Heading - 3. Data Storage & Security -->
    <TextView
        android:id="@+id/profile_data_storage_security_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.580"
        app:layout_constraintHorizontal_bias="0.22"
        android:text="@string/profile_data_storage_security_lbl"
        android:textAppearance="@style/headings"/>

    <!-- Subheading -->
    <TextView
        android:id="@+id/profile_all_data_is_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.645"
        app:layout_constraintHorizontal_bias="0.45"
        android:text="@string/profile_all_data_is_txt"
        android:textAppearance="@style/subheadings"/>


    <!-- Heading  - 4. Sharing Your Data -->
    <TextView
        android:id="@+id/profile_sharing_your_data_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.730"
        app:layout_constraintHorizontal_bias="0.16"
        android:text="@string/profile_sharing_your_data_lbl"
        android:textAppearance="@style/headings"/>

    <!-- Subheading -->
    <TextView
        android:id="@+id/profile_we_do_not_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.770"
        app:layout_constraintHorizontal_bias="0.35"
        android:text="@string/profile_we_do_not_txt"
        android:textAppearance="@style/subheadings"/>


    <!-- Heading - 5. Your Rights -->
    <TextView
        android:id="@+id/profile_your_rights_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.835"
        app:layout_constraintHorizontal_bias="0.11"
        android:text="@string/profile_your_rights_lbl"
        android:textAppearance="@style/headings"/>

    <!-- Subheadings -->
    <TextView
        android:id="@+id/profile_you_can_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.860"
        app:layout_constraintHorizontal_bias="0.10"
        android:text="@string/profile_you_can_txt"
        android:textAppearance="@style/subheadings"/>

    <TextView
        android:id="@+id/profile_user_rights_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.945"
        app:layout_constraintHorizontal_bias="0.32"
        android:text="@string/profile_user_rights_txt"
        android:textAppearance="@style/subheadings"/>

</androidx.constraintlayout.widget.ConstraintLayout>