<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="230dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="16dp"
    android:backgroundTint="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Question Mark Icon Image -->
        <ImageView
            android:id="@+id/image_view_question_mark"
            android:layout_width="28dp"
            android:layout_height="32dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/image_view_question_mark"
            android:src="@drawable/dialog_box_question_mark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!-- Heading/Title -->
        <TextView
            android:id="@+id/logout_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/logout_lbl"
            android:textAppearance="@style/dialog_box_headings"
            app:layout_constraintEnd_toEndOf="@+id/image_view_question_mark"
            app:layout_constraintStart_toStartOf="@+id/image_view_question_mark"
            app:layout_constraintTop_toBottomOf="@+id/image_view_question_mark" />

        <!-- Subheading/Note -->
        <TextView
            android:id="@+id/logout_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/logout_note"
            android:textAlignment="center"
            android:textAppearance="@style/dialog_box_subheadings"
            app:layout_constraintEnd_toEndOf="@+id/logout_lbl"
            app:layout_constraintStart_toStartOf="@+id/logout_lbl"
            app:layout_constraintTop_toBottomOf="@+id/logout_lbl" />


        <!-- Buttons -->
        <!-- Logout Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_btn"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="150dp"
            android:backgroundTint="@color/dark_blue"
            app:cornerRadius="4dp"

            app:layout_constraintEnd_toEndOf="@+id/logout_note"
            app:layout_constraintTop_toBottomOf="@+id/logout_note"
            android:text="@string/logout_btn"
            android:textSize="12sp"
            android:letterSpacing="-0.04"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular" />
        <!--        app:layout_constraintStart_toStartOf="@+id/logout_note"-->

        <!-- Stay Logged In Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/stay_logged_in_btn"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="145dp"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="4dp"
            app:layout_constraintStart_toStartOf="@+id/logout_note"
            app:layout_constraintEnd_toEndOf="@+id/logout_note"
            app:layout_constraintTop_toBottomOf="@+id/logout_note"
            android:text="@string/stay_logged_in_btn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="12sp"
            android:letterSpacing="-0.04"
            android:textColor="@color/light_brown"
            android:fontFamily="@font/poppins_regular"
            app:strokeColor="@color/light_brown"
            app:strokeWidth="3dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>